小改动:优化性能

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
@@ -7,11 +7,11 @@
           .category_item
             a.category_button(href="/archives/",style="background:linear-gradient(to right,#00868Bdb,#3fc1c9db)")
               span.category_button_text 归档
-              i.fas.fa-laptop-code
+              i.anzhiyufont.anzhiyu-icon-book
           .category_item
             a.category_button(href="/archives/2025/",style="background:linear-gradient(to right, #0A5ABEdb, #2fcbffdb)")
               span.category_button_text 2025
-              i.fas.fa-lightbulb
+              i.anzhiyufont.anzhiyu-icon-dove
       .top_post_group
         //- 这下面是原来固定的写法
         //- if site.data.slider
