--- a/themes/sxiaohe/layout/includes/head/preconnect.pug
+++ b/themes/sxiaohe/layout/includes/head/preconnect.pug
@@ -1,4 +1,5 @@
-link(rel="preconnect" href="//cdn.jsdelivr.net")
+link(rel="preconnect" href="//jsd.sxiaohe.top")
+link(rel="preconnect" href="//www.sxiaohe.top")
 
 if theme.google_analytics
   link(rel="preconnect" href="//www.google-analytics.com" crossorigin='')
