小改动:优化性能

--- a/themes/sxiaohe/layout/includes/head/preconnect.pug
+++ b/themes/sxiaohe/layout/includes/head/preconnect.pug
@@ -1,5 +1,6 @@
-link(rel="preconnect" href="//jsd.sxiaohe.top")
 link(rel="preconnect" href="//www.sxiaohe.top")
+link(href="https://www.sxiaohe.top" rel="dns-prefetch")
+link(rel="preconnect" href="//jsd.sxiaohe.top")
 
 if theme.google_analytics
   link(rel="preconnect" href="//www.google-analytics.com" crossorigin='')
