小改动:优化性能

--- a/themes/sxiaohe/layout/includes/head/preconnect.pug
+++ b/themes/sxiaohe/layout/includes/head/preconnect.pug
@@ -22,3 +22,7 @@ if theme.blog_title_font && theme.blog_title_font.font_link && theme.blog_title_
 
 if theme.busuanzi.site_uv || theme.busuanzi.site_pv || theme.busuanzi.page_pv
   link(rel="preconnect" href="//busuanzi.ibruce.info")
+
+<link rel="preload" href="/css/index.css" as="style">
+<link rel="preload" href="/js/main.js" as="script">
+<link rel="preload" href="/js/utils.js" as="script">
