小改动:优化性能

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
@@ -39,7 +39,7 @@
         |   const postsHtml = randomElements.map((i) => `
         |     <div class="top_post_item">
         |       <div class="post_cover">
-        |         <a href="/article/${i.abbrlink}.html" title="${i.title}">
+        |         <a href="/posts/${i.abbrlink}.html" title="${i.title}">
         |           <img srcset class="post_bg entered loaded" src="${i.cover}" alt="${i.title}" data-no-lazy loading="eager">
         |           <div class="post_cover_info">
         |             <p class="post_cover_text">${i.description}</p>
