--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -62,17 +62,17 @@
       }
       }
   p#ghbdages
-    a.github-badge(href="https://hexo.io/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" alt="hexo")
-    a.github-badge(href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" alt="butterfly")
-    a.github-badge(href="https://github.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" alt="github")
-    a.github-badge(href="https://icp.gov.moe/?keyword=20251949" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" alt="萌icp") 
-    a.github-badge(href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" alt="jsd镜像")
-    a.github-badge(href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" alt="又拍云")
-    a.github-badge(href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" alt="by-nc-cc")
+    a.github-badge(loading="lazy" href="https://hexo.io/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" alt="hexo")
+    a.github-badge(loading="lazy" href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" alt="butterfly")
+    a.github-badge(loading="lazy" href="https://github.com/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" alt="github")
+    a.github-badge(loading="lazy" href="https://icp.gov.moe/?keyword=20251949" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" alt="萌icp") 
+    a.github-badge(loading="lazy" href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" alt="jsd镜像")
+    a.github-badge(loading="lazy" href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" alt="又拍云")
+    a.github-badge(loading="lazy" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
+      img.entered.loaded(data-src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" alt="by-nc-cc")
