--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -43,14 +43,14 @@ if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
 //- main css
-link(rel='stylesheet', href=url_for(theme.asset.main_css) media="only x" onload="this.onload=null;this.media='all'")
+link(rel='stylesheet', href=url_for(theme.asset.main_css) media="print" onload="this.media='all'")
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="only x" onload="this.onload=null;this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
-  link(rel='stylesheet', href=url_for(theme.asset.snackbar_css) media="only x" onload="this.onload=null;this.media='all'")
+  link(rel='stylesheet', href=url_for(theme.asset.snackbar_css) media="print" onload="this.media='all'")
 
 if theme.fancybox
-  link(rel='stylesheet' href=url_for(theme.asset.fancybox_css_v4) media="only x" onload="this.onload=null;this.media='all'")
+  link(rel='stylesheet' href=url_for(theme.asset.fancybox_css_v4) media="print" onload="this.media='all'")
 
 //- google_adsense
 !=partial('includes/head/google_adsense', {}, {cache: true})
@@ -60,7 +60,7 @@ if theme.fancybox
 
 //- font
 if theme.blog_title_font &&　theme.blog_title_font.font_link
-  link(rel='stylesheet' href=url_for(theme.blog_title_font.font_link) media="only x" onload="this.onload=null;this.media='all'")
+  link(rel='stylesheet' href=url_for(theme.blog_title_font.font_link) media="print" onload="this.media='all'")
 
 //- global config
 !=partial('includes/head/config', {}, {cache: true})
