--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -43,8 +43,8 @@ if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
 //- main css
-link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/index.css" media="print" onload="this.media='all'")
-link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="only x" onload="this.onload=null;this.media='all'")
+link(rel='stylesheet', href=url_for(theme.asset.main_css))
+link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
   link(rel='stylesheet', href=url_for(theme.asset.snackbar_css) media="print" onload="this.media='all'")
