--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
@@ -42,6 +42,6 @@ script(type="text/javascript")
   | quicklink({
   |   timeout: 1000, // 预取链接的超时时间（毫秒）
   |   el: document.getElementById('content'), // 指定要监听的元素
-  |   urls: ['https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/index.css'], // 预取的 URL 列表
+  |   urls: ['https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/index.css', '/page2'], // 预取的 URL 列表
   |   priority: true, // 是否优先预取高优先级链接
   | });
