--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -1,4 +1,10 @@
 #about-page
+  link(rel='stylesheet', href='/about/css/about.css')
+  link(rel='stylesheet', href='/about/css/careers.css')
+  link(rel='stylesheet', href='/about/css/genshinimpact.css')
+  link(rel='stylesheet', href='/about/css/hello-about.css')
+  link(rel='stylesheet', href='/about/css/site.css')
+  link(rel='stylesheet', href='/about/css/skills.css')
   .author-box
     .author-img
       img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
