--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
@@ -45,3 +45,5 @@ script(type="text/javascript")
   |   urls: ['https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/index.css', '/page2'], // 预取的 URL 列表
   |   priority: true, // 是否优先预取高优先级链接
   | });
+  | import { injectSpeedInsights } from '@vercel/speed-insights';
+  | injectSpeedInsights();
