--- a/themes/sxiaohe/layout/includes/404.pug
+++ b/themes/sxiaohe/layout/includes/404.pug
@@ -3,6 +3,7 @@
 
 #body-wrap.error
   include ./header/index.pug
+  link(rel='stylesheet', href='/404/css/ew.css')
   .error-box
     #error-wrap
       .error-content
