--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
@@ -1,4 +1,6 @@
 #article-container
+  link(rel='stylesheet', href='/link/css/linkMain.css')
+  link(rel='stylesheet', href='/404/css/linkMainCard.css')
   if top_img === false
     h1.page-title= page.title
   .flink
