--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -44,7 +44,7 @@ if (theme.pwa && theme.pwa.enable)
 
 //- main css
 link(rel='stylesheet', href=url_for(theme.asset.main_css))
-link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.github.io/css/diy_css.css"  media="print" onload="this.media='all'")
+link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.github.io/css/diy_css.min.css"  media="print" onload="this.media='all'")
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
