--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink.pug
@@ -1,5 +1,5 @@
 #article-container
-  link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/page_css.css")
+  link(rel='stylesheet', href="https://jsd.sxiaohe.top/hexo/css/page_css.css")
   if top_img === false
     h1.page-title= page.title
   .flink
