--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/icat_change.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/icat_change.pug
@@ -1,6 +1,7 @@
 - var pageBackground = 'background: url(' + page.top_bg + ') left 28% / cover no-repeat;'
 
 #icat_page
+  link(rel='stylesheet', href="https://jsd.sxiaohe.top/hexo/css/page_css.css")
   .icat-content.icat-content-item.icatPage.single(style=pageBackground)
     .icat-card-content
       .icat-content-item-tips= page.top_item || _p('Hallo iCat！')
