--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -1,5 +1,5 @@
 #about-page
-  link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/page_css.css")
+  link(rel='stylesheet', href="https://jsd.sxiaohe.top/hexo/css/page_css.css")
   .author-box
     .author-img
       img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
