--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/categories.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/categories.pug
@@ -1,2 +1,3 @@
 .category-lists!= list_categories()
+link(rel='stylesheet', href="https://jsd.sxiaohe.top/hexo/css/page_css.css")
 <div id="categories-chart" data-parent="true" style="height: 300px; padding: 10px;"></div>
