--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
@@ -1,7 +1,7 @@
 #essay_page
   script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/waterfall.js")
   script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/essay.js")
-  link(rel='stylesheet', href="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/css/page_css.css")
+  link(rel='stylesheet', href="https://jsd.sxiaohe.top/hexo/css/page_css.css")
   #bber
     section.timeline.page-1
       ul#waterfall.list
