--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -19,7 +19,8 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     if page.type !== '404'
       #body-wrap(class=pageType)
         include ./header/index.pug
-        include ./sxiaohe_pug/css-neil.pug
+        include ./sxiaohe_pug/add-css.pug
+        include ./sxiaohe_pug/add-js.pug
 
         main#content-inner.layout(class=hideAside)
           if body
