--- a/themes/sxiaohe/source/css/page_css.styl
+++ b/themes/sxiaohe/source/css/page_css.styl
@@ -1,4 +1,12 @@
-// diy css
+if hexo-config('css_prefix')
+  @import 'nib'
+@import 'var'
+@import '_third-party/normalize.min.css'
+// diy page css
+@import '_global/*'
+@import '_highlight/highlight'
+@import '_layout/*'
+
 @import '_sxiaohe_page_style/**/*.css'
 @import '_sxiaohe_page_styl/**/*'
 @import '_page/*'
