--- a/themes/sxiaohe/source/css/page_css.styl
+++ b/themes/sxiaohe/source/css/page_css.styl
@@ -1,5 +1,8 @@
 @import 'var'
 @import '_third-party/normalize.min.css'
+@import '_global/*'
+@import '_highlight/highlight'
+@import '_layout/*'
 // diy page css
 @import '_sxiaohe_page_style/**/*.css'
 @import '_sxiaohe_page_styl/**/*'
