--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -55,7 +55,7 @@ if (theme.pwa && theme.pwa.enable)
 
 //- main css
 link(rel='stylesheet', href=url_for(theme.asset.main_css))
-link(rel='stylesheet', href="/css/color_css.css"  media="print" onload="this.media='all'")
+link(rel='stylesheet', href="/css/diy_color.css"  media="print" onload="this.media='all'")
 link(rel='stylesheet', href="/css/home.css"  media="print" onload="this.media='all'")
 link(rel='stylesheet', href="/css/search.css"  media="print" onload="this.media='all'")
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
