--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -7,3 +7,6 @@ if hexo-config('css_prefix')
 @import '_global/*'
 @import '_highlight/highlight'
 @import '_layout/*'
+@import '_page/*'
+@import '_tags/*'
+@import '_mode/*'
