--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -20,6 +20,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
       #body-wrap(class=pageType)
         include ./header/index.pug
         include ./sxiaohe_pug/add-css.pug
+        include ./sxiaohe_pug/font/anzhiyu_css.pug
         include ./sxiaohe_pug/add-js.pug
 
         main#content-inner.layout(class=hideAside)
