--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/add-css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/add-css.pug
@@ -1323,6 +1323,17 @@ style.
   #menus>div.menus_items>div>a {
     padding: 0!important;
   }
+
+  #page-header.not-top-img #nav {
+    font-size: 19.3px;
+    padding: 0 30px 0 20px;
+  }
+
+  @media screen and (max-width: 600px) {
+    #nav {
+        padding: 0 15px 0 11px;
+    }
+  }
   /* 悬浮侧边栏样式（电脑版） */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年3月7日 */
