--- a/themes/sxiaohe/source/css/_sxiaohe_diy_style/menu/other_menu.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_diy_style/menu/other_menu.css
@@ -28,3 +28,14 @@ span.menuname {
 #menus>div.menus_items>div>a {
     padding: 0!important;
 }
+
+#page-header.not-top-img #nav {
+    font-size: 19.3px;
+    padding: 0 30px 0 20px;
+}
+
+@media screen and (max-width: 600px) {
+    #nav {
+        padding: 0 15px 0 11px;
+    }
+}
