--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -19,10 +19,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     if page.type !== '404'
       #body-wrap(class=pageType)
         include ./header/index.pug
-        include ./sxiaohe_pug/diy_css.pug
-        include ./sxiaohe_pug/page_style.pug
-        include ./sxiaohe_pug/font/anzhiyu_css.pug
-        include ./sxiaohe_pug/add-js.pug
+        include ./additional-style.pug
 
         main#content-inner.layout(class=hideAside)
           if body
