--- a/themes/sxiaohe/layout/includes/404.pug
+++ b/themes/sxiaohe/layout/includes/404.pug
@@ -2,6 +2,7 @@
 - let error_404_bg_img = `background-image: url('${url_for(error_404_top_img)}')`
 
 #body-wrap.error
+  include ./additional-style.pug
   include ./header/index.pug
   .error-box
     #error-wrap
