--- a/themes/sxiaohe/layout/includes/head/preconnect.pug
+++ b/themes/sxiaohe/layout/includes/head/preconnect.pug
@@ -4,6 +4,8 @@ link(rel="preconnect" href="//jsd.sxiaohe.top")
 link(href="https://jsd.sxiaohe.top" rel="dns-prefetch")
 link(rel="preconnect" href="https://lf26-cdn-tos.bytecdntp.com")
 link(href="https://lf26-cdn-tos.bytecdntp.com" rel="dns-prefetch")
+link(rel="preconnect" href="https://static.vercel.sxiaohe.top")
+link(href="https://static.vercel.sxiaohe.top" rel="dns-prefetch")
 
 if theme.google_analytics
   link(rel="preconnect" href="//www.google-analytics.com" crossorigin='')
