--- a/themes/sxiaohe/layout/includes/additional-style.pug
+++ b/themes/sxiaohe/layout/includes/additional-style.pug
@@ -6,3 +6,5 @@ include ./sxiaohe_pug/page_style.pug
 include ./sxiaohe_pug/font/anzhiyu_css.pug
 //- 自定义js文件（核心文件）
 include ./sxiaohe_pug/add-js.pug
+//- 友链美化文件
+include ./sxiaohe_pug/page/flink_css.pug
