--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink_css.pug
@@ -149,7 +149,7 @@ style.
     height: 100%;
   }
 style.
-  /* 友链检查延迟美化 */
+  /* 友链检查延迟美化(柳神) */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年3月7日 */
   .status-tag {
@@ -180,4 +180,21 @@ style.
   }
   .status-tag-red {
     background-color: #B90000; /* 红色 */
+  }
+style.
+  .site-card-group.link-no-img .site-card .state {
+    left: 3px;
+    top: 3px;
+  }
+  .site-card-group .site-card .state {
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    font-size: 12px;
+    color: #ddd;
+    border-radius: 6px;
+    padding: 2px 5px;
+    background: rgba(0, 0, 0, .5);
+    transform: scale(.6);
+    transform-origin: left top;
   }
