--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/flink_css.pug
@@ -182,6 +182,9 @@ style.
     background-color: #B90000; /* 红色 */
   }
 style.
+  /* 友链检查延迟美化以及卡片美化(轻笑) */
+  /* 由苏晓河进行编写以及调整 */
+  /* 时间：2025年3月7日 */
   .site-card-group.link-no-img .site-card .state {
     left: 3px;
     top: 3px;
@@ -197,4 +200,7 @@ style.
     background: rgba(0, 0, 0, .5);
     transform: scale(.6);
     transform-origin: left top;
+  }
+  .site-card .img {
+    border-radius: 11.5px !important;
   }
