--- a/themes/sxiaohe/layout/includes/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/page/flink.pug
@@ -4,30 +4,9 @@
       each i in site.data.link
         if i.class_name
           h2!= i.class_name
-        if i.class_desc
-          .flink-desc!=i.class_desc
-        if i.flink_style === 'flexcard'
-          .flexcard-flink-list
-            - let randomList = i.link_list.slice()
-            if i.random
-              - randomList.sort(() => Math.random() - 0.5)
-            each item in randomList
-              a.flink-list-card(href=url_for(item.link) target='_blank' data-title=item.descr)
-                .wrapper.cover
-                  - var siteshot = item.siteshot ? url_for(item.siteshot) : 'https://s0.wp.com/mshots/v1/' + item.link + '?w=400&h=300'
-                  if theme.lazyload.enable
-                    img.cover.fadeIn.nolazyload(data-lazy-src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
-                    img.cover.fadeIn.nolazyload(data-lazy-src=avatar onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
-                  else
-                    img.cover.fadeIn.nolazyload(src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
-                    img.cover.fadeIn.nolazyload(data-lazy-src=avatar onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
-                .info
-                  if theme.lazyload.enable
-                    img.flink-avatar.nolazyload(data-lazy-src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
-                  else
-                    img.nolazyload(src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
-                  span.flink-sitename= item.name
-        else if i.flink_style === 'volantis'
+        //- if i.class_desc
+        //-  .flink-desc!=i.class_desc
+        if i.flink_style === 'img-link'
           .volantis-flink-list
             - let randomList = i.link_list.slice()
             if i.random
@@ -37,6 +16,17 @@
                 .img
                   - var siteshot = item.siteshot ? url_for(item.siteshot) : 'https://s0.wp.com/mshots/v1/' + item.link + '?w=400&h=300'
                   img.nolazyload.no-lightbox(src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
+                .info
+                  img.nolazyload.no-lightbox(src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
+                  span.title= item.name
+                  span.desc(title=item.descr)= item.descr
+        else if i.flink_style === 'not-img-link'
+          .site-card-group.link-no-img
+            - let randomList = i.link_list.slice()
+            if i.random
+              - randomList.sort(() => Math.random() - 0.5)
+            each item in randomList
+              a.site-card(target='_blank' rel='noopener' href=url_for(item.link))
                 .info
                   img.nolazyload.no-lightbox(src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
                   span.title= item.name
