--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -9,7 +9,7 @@
         i.fa-fw.fa-link.fa-solid
       a.icon_link(data-pjax-state="" href="/messageboard/" title="留言")
         i.fa-comment.fa-fw.fa-regular
-    img.entered.footer_logo.loaded(loading="lazy" data-src="https://hexo-img.s3.bitiful.net/avatar.avif?v=d3d8e5e465" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="https://hexo-img.s3.bitiful.net/avatar.avif?v=d3d8e5e465" title="返回顶部")
+    img.entered.footer_logo.loaded(loading="lazy" data-src="/img/avatar.avif?v=d3d8e5e465" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="/img/avatar.avif?v=d3d8e5e465" title="返回顶部")
     .icon_left
       a.icon_link(href="/" rel="noopener" target="_blank" title="我的主页")
         i.fa-compass.fa-fw.fa-solid
@@ -63,16 +63,16 @@
       }
   p#ghbdages
     a.github-badge(loading="lazy" href="https://hexo.io/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/hexo.svg" alt="hexo")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/hexo.svg" data-ll-status="loaded" src="/img/footer_svg/hexo.svg" alt="hexo")
     a.github-badge(loading="lazy" href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/butterfly.svg" alt="butterfly")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="/img/footer_svg/butterfly.svg" alt="butterfly")
     a.github-badge(loading="lazy" href="https://github.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/github.svg" alt="github")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/github.svg" data-ll-status="loaded" src="/img/footer_svg/github.svg" alt="github")
     a.github-badge(loading="lazy" href="https://icp.gov.moe/?keyword=20251949" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/menicp.svg" alt="萌icp") 
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/menicp.svg" data-ll-status="loaded" src="/img/footer_svg/menicp.svg" alt="萌icp") 
     a.github-badge(loading="lazy" href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/jsd.svg" alt="jsd镜像")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/jsd.svg" data-ll-status="loaded" src="/img/footer_svg/jsd.svg" alt="jsd镜像")
     a.github-badge(loading="lazy" href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/ypy.svg" alt="又拍云")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/ypy.svg" data-ll-status="loaded" src="/img/footer_svg/ypy.svg" alt="又拍云")
     a.github-badge(loading="lazy" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(width="101" height="20" data-src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" data-ll-status="loaded" src="https://hexo-img.s3.bitiful.net/footer_svg/cc.svg" alt="by-nc-cc")
+      img.entered.loaded(width="101" height="20" data-src="/img/footer_svg/cc.svg" data-ll-status="loaded" src="/img/footer_svg/cc.svg" alt="by-nc-cc")
