--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -7,7 +7,8 @@ doctype html
 html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside)
   head
     include ./head.pug
-  include ./sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
+  width
+    include ./sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
   body(style="overflow: auto;")
     if theme.preloader.enable
       !=partial('includes/loading/index', {}, {cache: true})
