--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -10,3 +10,5 @@ if hexo-config('css_prefix')
 @import '_page/*'
 @import '_tags/*'
 @import '_mode/*'
+@import '_sxiaohe_page_style/**/*.css'
+@import '_sxiaohe_page_styl/**/*'
