--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -1,4 +1,5 @@
 #about-page
+  link(rel='stylesheet', href="/css/about.css"  media="print" onload="this.media='all'")
   .author-box
     .author-img
       img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
