--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
@@ -1,6 +1,10 @@
 #essay_page
   script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/waterfall.js")
   script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/essay.js")
+  style.
+    #web_bg~.page:has(#essay_page) {
+      background: none!important;
+    }
   #bber
     section.timeline.page-1
       ul#waterfall.list
