--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -1,15 +1,106 @@
 #about-page
-  link(rel='stylesheet', href="/css/about.css"  media="print" onload="this.media='all'")
-  .author-box
-    .author-img
-      img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
+  .author-main
+    style.
+      /* 1.基础架构 */
+      #about-page .author-main {
+        osition: relative;
+        display: flex;
+        align-items: center;
+        user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+      }
+      .author-tag-left {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-right: 30px;
+      }
+      .author-tag-right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 30px;
+      }
+      /* 2.头像美化 */
+      #about-page .author-box span {
+        position: absolute;
+        inset: 5px;
+        border-radius: 50%;
+        background: rgba(253, 253, 253, 0.8);
+        z-index: 1;
+      }
+      #about-page .author-box::before {
+        content: '';
+        position: absolute;
+        width: 500px;
+        height: 500px;
+        background-image: conic-gradient(transparent, transparent, transparent, #8758FF);
+        animation: animate 4s linear infinite;
+        animation-delay: -2s;
+      }
+      #about-page .author-box::after {
+        content: '';
+        position: absolute;
+        width: 500px;
+        height: 500px;
+        background-image: conic-gradient(transparent, transparent, transparent, #5CB8E4);
+        animation: animate 4s linear infinite;
+      }
+      /* 3.列表卡片美化 */
+      .author-tag {
+        transform: translate(0, -4px);
+        padding: 1px 8px;
+        background: var(--heo-card-bg);
+        border: var(--style-border-always);
+        border-radius: 40px;
+        margin-top: 6px;
+        font-size: 14px;
+        font-weight: bold;
+        box-shadow: var(--heo-shadow-lightblack);
+        animation: 6s ease-in-out 0s infinite normal none running floating;
+      }
+      /* 4.列表卡片美化以及动画 */
+      /* 4.1.左序列 */
+      .author-tag-left .author-tag:first-child, .author-tag-left .author-tag:last-child {
+        margin-right: -16px;
+      }
+      /* 4.2.右序列 */
+      .author-tag-right .author-tag:first-child, .author-tag-right .author-tag:last-child {
+        margin-left: -16px;
+      }
+      .author-tag:nth-child(1) {
+        animation-delay: 0s;
+      }
+      .author-tag:nth-child(2) {
+        animation-delay: 0.6s;
+      }
+      .author-tag:nth-child(3) {
+        animation-delay: 1.2s;
+      }
+      .author-tag:nth-child(4) {
+        animation-delay: 1.8s;
+      }
+    .author-tag-left
+      span.author-tag 💻 Like数码科技
+      span.author-tag 🥣 干饭魂 干饭人
+      span.author-tag 🕊 咕咕咕咕咕咕~
+      span.author-tag 🧱 CV工程师
+    .author-box
+      span
+      .author-img
+        img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg')
+    .author-tag-right
+      span.author-tag 吃饭不如碎觉 💤
+      span.author-tag 乐观 积极 向上 🤝
+      span.author-tag 专攻各种困难 🔨
+      span.author-tag 人不狠话超多 💢
     .image-dot
   p.p.center.logo.large 关于我
-  p.p.center.small 生活明朗，万物可爱✨
   .author-content
     .author-content-item.myInfoAndSayHello
       .title1 你好，很高兴认识你👋
-      .title2
+      .title2                       
         | 我叫
         span.inline-word 陈志伟
       .title1
