--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -82,6 +82,17 @@
       .author-tag:nth-child(4) {
         animation-delay: 1.8s;
       }
+      @keyframes floating {
+        0% {
+          transform: translate(0, -4px);
+        }
+        50% {
+          transform: translate(0, 4px);
+        }
+        100% {
+          transform: translate(0, -4px);
+        }
+      }
     .author-tag-left
       span.author-tag 💻 Like数码科技
       span.author-tag 🥣 干饭魂 干饭人
