--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2233,6 +2233,10 @@ style.
         max-height: 400px;
     }
   }
+  /* 16.优化代码框部分内容 */
+  #article-container figure.highlight {
+    border-radius: 7px;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
