--- a/themes/sxiaohe/source/css/_sxiaohe_diy_style/style/index.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_diy_style/style/index.css
@@ -311,3 +311,8 @@ div#archive, div#category, div#tag {
         max-height: 400px;
     }
 }
+
+/* 16.优化代码框部分内容 */
+#article-container figure.highlight {
+    border-radius: 7px;
+}
