--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -11,6 +11,26 @@
         -khtml-user-select: none;
         -moz-user-select: none;
       }
+      #about-page .author-box {
+        position: relative;
+        width: 189px;
+        height: 189px;
+        background: rgba(253, 253, 253, 0.8);
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      #about-page .author-img {
+        margin: auto;
+        border-radius: 50%;
+        overflow: hidden;
+        width: 180px;
+        height: 180px;
+        z-index: 10;
+        background: var(--mj-card-bg);
+      }
       .author-tag-left {
         display: flex;
         flex-direction: column;
