--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -4,12 +4,26 @@
     style.
       /* 1.基础架构 */
       #about-page .author-main {
-        osition: relative;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: box;
         display: flex;
+        -webkit-box-align: center;
+        -moz-box-align: center;
+        -o-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
         align-items: center;
+        -webkit-box-pack: center;
+        -moz-box-pack: center;
+        -o-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        margin: 0 0 16px 0;
         user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
       }
       #about-page .author-box {
         position: relative;
