--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -187,43 +187,6 @@
       h1 Hello there!
 
   .author-content
-    .author-content-item.skills
-      .card-content
-        .author-content-item-tips 技能
-        span.author-content-item-title 开启创造力
-        .skills-style-group
-          .tags-group-all
-            .tags-group-wrapper
-              each i in site.data.creativity
-                - const evenNum = i.creativity_list.filter((x, index) => index % 2 === 0);
-                - const oddNum = i.creativity_list.filter((x, index) => index % 2 === 1);
-                each item, index in i.creativity_list
-                  if ((index+1 <= evenNum.length) && (index+1 <= oddNum.length))
-                    .tags-group-icon-pair
-                      .tags-group-icon(style=`background: ${evenNum[index].color}`)
-                        img.no-lightbox(title=evenNum[index].name, src=evenNum[index].icon)
-                      .tags-group-icon(style=`background: ${oddNum[index].color}`)
-                        img.no-lightbox(title=oddNum[index].name, src=oddNum[index].icon)
-          .skills-list
-            each i in site.data.creativity
-              each item, index in i.creativity_list
-                .skill-info
-                  .skill-icon(style=`background: ${item.color}`)
-                    img.no-lightbox(title=item.name, src=item.icon)
-                  .skill-name
-                    span=item.name
-            .etc ...
-    .author-content-item.careers
-      .card-content
-        .author-content-item-tips 生涯
-        span.author-content-item-title 无限进步
-        .careers-group
-          .careers-item
-            .circle(style='background:#357ef5')
-            .name EDU,软件工程专业
-        img.author-content-img.no-lightbox(alt='生涯', src='https://img02.anheyu.com/adminuploads/1/2022/09/26/6330e9bcc39cc.png')
-
-  .author-content
     .about-statistic.author-content-item
       .card-content
         .author-content-item-tips 数据
@@ -254,22 +217,7 @@
         div
           span.selfInfo-title 现在职业
           |
-          span.selfInfo-content(style='color:#b04fe6') 大三学生👨‍🎓
-
-  .author-content
-    .author-content-item.personalities
-      .author-content-item-tips 性格
-      span.author-content-item-title 执政官
-      .title2(style='color:#ac899c') ESFJ-A
-      .post-tips
-        | 在
-        a(href='https://www.16personalities.com/', target='_blank', rel='noopener nofollow') 16personalities
-        |  了解更多关于
-        a(target='_blank', rel='noopener external nofollow', href='https://www.16personalities.com/ch/esfj-%E4%BA%BA%E6%A0%BC') 执政官
-      .image
-        img.no-lightbox(src='https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/ESFJ-A.svg')
-    .author-content-item.myphoto
-      img.author-content-img.no-lightbox(alt='自拍', src='https://img02.anheyu.com/adminuploads/1/2022/09/24/632e9643611ec.jpg')
+          span.selfInfo-content(style='color:#b04fe6') 
 
   .author-content
     .author-content-item.maxim
@@ -278,21 +226,16 @@
         span(style='opacity:.6;margin-bottom:8px') 生活明朗，
         |
         span 万物可爱。
-    .author-content-item.buff
-      .card-content
-        .author-content-item-tips 特长
-        span.buff-title
-          span(style='opacity:.6;margin-bottom:8px')
-            | 脑回路新奇的
-            span.inline-word 酸菜鱼
-          |
-          span
-            | 二次元指数
-            span.inline-word MAX
-      .card-background-icon
-        i.fas.fa-dice-d20
+    .author-content-item.myphoto
+      img.author-content-img.no-lightbox(alt='自拍', src='https://img02.anheyu.com/adminuploads/1/2022/09/24/632e9643611ec.jpg')
 
   .author-content
+    .author-content-item.like-technology
+      .card-content
+        .author-content-item-tips 关注偏好
+        span.author-content-item-title 数码科技
+        .content-bottom
+          .tips 手机、电脑软硬件
     .author-content-item.game-yuanshen
       .card-content
         .author-content-item-tips 爱好游戏
@@ -302,37 +245,6 @@
             .loading-bar(role='presentation', aria-hidden='true')
               img.no-lightbox(src='https://yuanshen.site/imgs/loading-bar.png', alt='Loading...', longdesc='https://ys.mihoyo.com/main/')
           .tips.game-yuanshen-uid UID: 125766904
-    .author-content-item.comic-content
-      .card-content
-        .author-content-item-tips 爱好番剧
-        span.author-content-item-title 紫罗兰的永恒花园
-        .content-bottom
-          .banner-button-group
-            a.banner-button(onclick='window.open("https://www.bilibili.com/bangumi/play/ep173286?from=search&seid=10927182858100936967&from_spmid=666.25.episode.0")', data-pjax-state)
-              i.fas.fa-circle-right
-              |
-              span.banner-button-text 立即追番
-
-  .author-content
-    .author-content-item.like-technology
-      .card-content
-        .author-content-item-tips 关注偏好
-        span.author-content-item-title 数码科技
-        .content-bottom
-          .tips 手机、电脑软硬件
-    .author-content-item.like-music
-      .card-content
-        .author-content-item-tips 音乐偏好
-        span.author-content-item-title 许嵩、民谣、
-        |
-        span.author-content-item-title 华语流行
-        .content-bottom
-          .tips 跟 安知鱼 一起欣赏更多音乐
-        .banner-button-group
-          a.banner-button(onclick='pjax.loadUrl("/music/")', data-pjax-state)
-            i.fas.fa-circle-right
-            |
-            span.banner-button-text 更多推荐
 
   .author-content
     .create-site-post.author-content-item.single
@@ -342,83 +254,6 @@
       | 的
       strong 软件工程
       | 专业，虽然有时候常常会忘记更新笔记，咕咕 ✋~ 但是记笔记真的是一个很棒的习惯 💪，能把学下来的知识进行积累，沉淀，有一句话说的好，能教给别人的知识，才是真正学会了的知识 ⚡ 每周我都会尽量进行更新 ☁️，如果没更的话，可能是我忘了，也可能是我在钻研某个东西的时候太入迷了
-      psw 肯定又熬夜了
-      del 同学们不要学我，老是熬夜会长痘
-      |  给大家推荐一部番：
-      .site-card-group
-        a.site-card(target='_blank', href='https://www.bilibili.com/bangumi/play/ss21542/?from=search&seid=10927182858100936967', data-title='紫罗兰的永恒花园')
-          .wrapper.cover
-            img.cover.fadeIn(src='https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/violet.jpg')
-          .info
-            img.flink-avatar(src='https://static.hdslb.com/images/favicon.ico', style='top: 19px')
-            span.site-title 紫罗兰的永恒花园
-      | 因为这部番，2018 年的一个夏天我看完以后心情久久不能释怀，为薇尔莉特与爱感到一种说不上来的味道，多年以后在看这部番，才明白原来这就是爱，喜欢这部番不仅仅是因为它制作的用心，不论是人物细节还是场景细节，不管是 op 还是 ed 都非常好听，最后的结局或许才是让我不能忘怀的原因，薇尔莉特，希望收到来自家人，朋友，恋人的那封 "信" ~
-      .checkbox.blue.checked
-        input(type='checkbox', checked)
-        p
-          | 致力于成为一个前端小姥🐷
-          img.inline-img(src='https://cdn1.tianli0.top/gh/volantis-x/cdn-emoji/aru-l/0000.gif/' data-fancybox='gallery', style='display: inline;margin: 0 3px;height: 1.1em;vertical-align: text-bottom;')
-      .checkbox.blue.checked
-        input(type='checkbox', checked)
-        p
-          | 又菜又爱玩🎮
-          kbd ctrl
-          |  +
-          kbd C
-          | 、
-          kbd ctrl
-          |  +
-          kbd V
-          | 高级CV工程师🏆
-      .checkbox.times.red.checked
-        input(type='checkbox', checked)
-        p 擅长PS、Pr、Ae、Au、Ai、Dw、An、Id等软件的安装与卸载🎃
-      .checkbox.times.red.checked
-        input(type='checkbox', checked)
-        p 精通Html、CSS、JavaScript、Vue、React、PHP、Java、Python、C、C++、C#、Go、TypeScript等单词的拼写🎲
-      .checkbox.times.red.checked
-        input(type='checkbox', checked)
-        p 熟悉Windows、Linux、Mac、Android、IOS等系统的开关机👻
-      span.p.h3 todoList
-      .checkbox.checked
-        input(type='checkbox', checked)
-        p 原生微信小程序
-      .checkbox.checked
-        input(type='checkbox', checked)
-        p vue3、vite、 pinia
-      .checkbox.checked
-        input(type='checkbox', checked)
-        p 重装文档重写
-      .checkbox
-        input(type='checkbox')
-        p Electron
-      .checkbox
-        input(type='checkbox')
-        p 操作系统
-      .checkbox.canvas
-        input(type='checkbox')
-        p svg绘制
-      .checkbox
-        input(type='checkbox')
-        p threeJS
-      .checkbox.Nuxt
-        input(type='checkbox')
-        p Next
-      .checkbox
-        input(type='checkbox')
-        p Flutter
-      .checkbox
-        input(type='checkbox')
-        p 智慧城市大前端
-      .checkbox
-        input(type='checkbox')
-        p react18系统学习
-      .checkbox
-        input(type='checkbox')
-        p 工业企业生产管理
-      .checkbox
-        input(type='checkbox')
-        p 语言的魅力
 
   .author-content
     .author-content-item.single.reward
@@ -442,23 +277,33 @@
             | 最新更新时间：
             time.datatime.reward-list-updateDate-time(datatime=rawData[0].datatime)=new Date(rawData[0].datatime).toISOString().slice(0, -14)
       .post-reward
-        button.tip-button.reward-button
-          span.tip-button__text 不给糖果就捣蛋
-          .coin-wrapper
-            .coin
-              .coin__middle
-              .coin__back
-              .coin__front
+        style.
+          .post-reward .reward-button {
+            display: inline-block!important;
+            adding: .2rem 2rem!important;
+            ound: var(--btn-bg)!important;
+            color: var(--btn-color)!important;
+            cursor: pointer!important;
+            -webkit-transition: all .4s!important;
+            -moz-transition: all .4s!important;
+            -o-transition: all .4s!important;
+            -ms-transition: all .4s!important;
+            transition: all .4s!important;
+          }
+        button.reward-button.tip-button
+          span.tip-button__text 投 喂
           .reward-main
             ul.reward-all
               li.reward-item
-                a(href='https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-weichat.png', target='_blank')
-                  img.post-qr-code-img(alt='wechat', src='https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-weichat.png')
-                .post-qr-code-desc wechat
+                a.about-reward(arget="_blank" data-pjax-state="")
+                  img.entered.loaded.post-qr-code-img(alt="微信" data-lazy-src="https://cdn.qcqx.cn/blog/pay/weixin.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/weixin.webp")
+                  .img-alt.is-center 微信
+                .post-qr-code-desc 微信
               li.reward-item
-                a(href='https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-alipay.png', target='_blank')
-                  img.post-qr-code-img(alt='alipay', src='https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-alipay.png')
-                .post-qr-code-desc alipay
+                a.about-reward(target="_blank")
+                  img.entered.loaded.post-qr-code-img(alt="支付宝" data-lazy-src="https://cdn.qcqx.cn/blog/pay/alipay.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/alipay.webp")
+                  .img-alt.is-center 支付宝
+                .post-qr-code-desc 支付宝
 
 script(src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/gsap/3.9.1/gsap.min.js")
 script.
@@ -471,7 +316,7 @@ script.
       const top = offsetTop - scrollTop;
       return top <= viewPortHeight;
     }
-    fetch('https://v6-widget.51.la/v6/{掩码ID}/quote.js').then(res => res.text()).then((data) => {
+    fetch('https://v6-widget.51.la/v6/527574/quote.js').then(res => res.text()).then((data) => {
         let title = ['最近活跃', '今日人数', '今日访问', '昨日人数', '昨日访问', '本月访问', '总访问量']
         let num = data.match(/(<\/span><span>).*?(\/span><\/p>)/g)
 
