--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -294,12 +294,12 @@
           ul.reward-all
             li.reward-item
               a.about-reward(arget="_blank" data-pjax-state="")
-                img.entered.loaded.post-qr-code-img(alt="微信" data-lazy-src="https://cdn.qcqx.cn/blog/pay/weixin.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/weixin.webp")
+                img.entered.loaded.post-qr-code-img(alt="微信" data-lazy-src="https://sourceimage.s3.bitiful.net/pay/weixin.jpg" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/weixin.webp")
                 .img-alt.is-center 微信
               .post-qr-code-desc 微信
             li.reward-item
               a.about-reward(target="_blank")
-                img.entered.loaded.post-qr-code-img(alt="支付宝" data-lazy-src="https://cdn.qcqx.cn/blog/pay/alipay.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/alipay.webp")
+                img.entered.loaded.post-qr-code-img(alt="支付宝" data-lazy-src="https://sourceimage.s3.bitiful.net/pay/zfb.png" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/alipay.webp")
                 .img-alt.is-center 支付宝
               .post-qr-code-desc 支付宝
         button.reward-button.tip-button
