--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
@@ -1,5 +1,5 @@
 #essay_page
-  script(async src="https://jsd.sxiaohe.top/npm/anzhiyu-theme-static@1.0.0/waterfall/waterfall.js")
+  script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/waterfall.js")
   script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/essay.js")
   style.
     #web_bg~.page:has(#essay_page) {
