--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -12,3 +12,4 @@ if hexo-config('css_prefix')
 @import '_mode/*'
 @import '_sxiaohe_page_style/**/*.css'
 @import '_sxiaohe_page_styl/**/*'
+@import './console.css'
