--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -43,6 +43,16 @@ nav#nav
       .nav-button#search-button
         a.site-page.social-icon.search(onclick="toggleWinbox()" title="美化设置-自定义你的风格" id="meihua-button" rel="noopener external nofollow")
           i.fas.fa-images.fa-fw
+      if theme.centerConsole.enable
+        input#center-console(type="checkbox")
+        label.widget(for="center-console" title=_p("中控台") onclick="anzhiyu.switchConsole();")
+          i.left
+          i.widget.center
+          i.widget.right
+      
+      !=partial('./console.pug', {}, {cache:true})
+
+
     .nav-button#toggle-menu
       a.site-page
         i.fas.fa-bars.fa-fw
