--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -38,106 +38,22 @@ nav#nav
       .nav-button#search-button(title="随机前往一个开往项目网站")
         a.site-page(data-pjax-state="external" draggable="false" href="https://www.travellings.cn/go.html" rel="external nofollow" title="随机前往一个开往项目网站")
           i.anzhiyu-icon-train.anzhiyufont
-
-      //- 美化设置
-      .nav-button#search-button
-        a.site-page.social-icon.search(onclick="toggleWinbox()" title="美化设置-自定义你的风格" id="meihua-button" rel="noopener external nofollow")
-          i.fas.fa-images.fa-fw
-      if theme.centerConsole.enable
-        label.widget(for="center-console" title=_p("中控台") onclick="anzhiyu.switchConsole();")
-          style.
-            label.widget {
-              --icon-size: 1.375rem;
-              position: relative;
-              right: 0;
-              top: 0;
-              bottom: 0;
-              height: var(--icon-size);
-              width: var(--icon-size);
-              cursor: pointer;
-              -webkit-transition: 1s;
-              -moz-transition: 1s;
-              -o-transition: 1s;
-              -ms-transition: 1s;
-              transition: 1s;
-              margin-left: 1rem;
-            }
-            i.left {
-              background: var(--font-color);
-            }
-            i.left {
-              background: var(--light-grey);
-              position: absolute;
-              border-radius: calc(var(--icon-size)* .15);
-              -webkit-transition: .5s var(--animation-on);
-              -moz-transition: .5s var(--animation-on);
-              -o-transition: .5s var(--animation-on);
-              -ms-transition: .5s var(--animation-on);
-              transition: .5s var(--animation-on);
-              inset: 0;
-              margin: auto;
-              right: auto;
-              width: calc(var(--icon-size) / 3);
-              height: calc(var(--icon-size) / 3);
-              -webkit-transform: translateY(calc(var(--icon-size) / 4));
-              -moz-transform: translateY(calc(var(--icon-size) / 4));
-              -o-transform: translateY(calc(var(--icon-size) / 4));
-              -ms-transform: translateY(calc(var(--icon-size) / 4));
-              transform: translateY(calc(var(--icon-size) / 4));
-            }
-            i.widget.center {
-              background: var(--font-color);
-            }
-            i.widget.center {
-              background: var(--light-grey);
-              position: absolute;
-              border-radius: calc(var(--icon-size)* .15);
-              -webkit-transition: .5s var(--animation-on);
-              -moz-transition: .5s var(--animation-on);
-              -o-transition: .5s var(--animation-on);
-              -ms-transition: .5s var(--animation-on);
-              transition: .5s var(--animation-on);
-              inset: 0;
-              margin: auto;
-              right: auto;
-              width: calc(var(--icon-size) / 3);
-              height: calc(var(--icon-size) / 3);
-              -webkit-transform: translateY(calc(var(--icon-size) / 4));
-              -moz-transform: translateY(calc(var(--icon-size) / 4));
-              -o-transform: translateY(calc(var(--icon-size) / 4));
-              -ms-transform: translateY(calc(var(--icon-size) / 4));
-              transform: translateY(calc(var(--icon-size) / 4));
-            }
-            i.widget.right {
-              background: var(--font-color);
-            }
-            i.widget.right {
-              background: var(--light-grey);
-              position: absolute;
-              border-radius: calc(var(--icon-size)* .15);
-              -webkit-transition: .5s var(--animation-on);
-              -moz-transition: .5s var(--animation-on);
-              -o-transition: .5s var(--animation-on);
-              -ms-transition: .5s var(--animation-on);
-              transition: .5s var(--animation-on);
-              inset: 0;
-              margin: auto;
-              right: auto;
-              width: calc(var(--icon-size) / 3);
-              height: calc(var(--icon-size) / 3);
-              -webkit-transform: translateY(calc(var(--icon-size) / 4));
-              -moz-transform: translateY(calc(var(--icon-size) / 4));
-              -o-transform: translateY(calc(var(--icon-size) / 4));
-              -ms-transform: translateY(calc(var(--icon-size) / 4));
-              transform: translateY(calc(var(--icon-size) / 4));
-            }
-          i.left
-          i.widget.center
-          i.widget.right
       
-      !=partial('./console.pug', {}, {cache:true})
-
-
+      #console-switch.nav-button
+        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
+          i.anzhiyu-icon-train.anzhiyufont
+      
+      #nav-music-ctrl
+        #music-Backward.nav-button
+          a.aplayer-icon-play(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.musicBackward()" rel="external nofollow" title="上一曲")
+            i.blogfont.gc-180.icon-play-next
+        #music-Switch.nav-button
+          a.aplayer-icon-play(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.musicSwitch()" rel="external nofollow" title="音乐开关")
+            i.blogfont.icon-play
+        #music-Forward.nav-button
+          a.aplayer-icon-play(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.musicForward()" rel="external nofollow" title="下一曲")
+            i.blogfont.icon-play-next
+      
     .nav-button#toggle-menu
       a.site-page
         i.fas.fa-bars.fa-fw
