--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -13,3 +13,4 @@ if hexo-config('css_prefix')
 @import '_sxiaohe_page_style/**/*.css'
 @import '_sxiaohe_page_styl/**/*'
 @import './console.css'
+@import './calendar.css'
