--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
@@ -5,6 +5,9 @@
     #web_bg~.page:has(#essay_page) {
       background: none!important;
     }
+    #bber .timeline ul li.bber-item {
+      width: auto!important;
+    }
   #bber
     section.timeline.page-1
       ul#waterfall.list
