修改夜间模式

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -1999,6 +1999,9 @@ style.
     bottom: 36px;
     background: linear-gradient(to top, transparent, rgb(56, 211, 203));
   }
+  [data-theme="dark"] #aside-content .card-info > div:first-child {
+    color: rgba(255, 255, 255, 0.89);
+  }
   /* 6.首页文章卡片样式表调整 */
   #recent-posts > .recent-post-item >.recent-post-info > .article-title {
     text-align: center;
