--- a/themes/sxiaohe/source/css/_sxiaohe_diy_color/chuckleMainColor.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_diy_color/chuckleMainColor.css
@@ -87,7 +87,7 @@
     --text-highlight-color: rgba(255,255,255,0.9);
     --ah-card-bg: #232326;
     --style-border-always: 1px solid var(--heo-card-border);
-    --font-color: rgba(255,255,255,0.86);
+    --font-color: rgba(255,255,255,0.86)!important;
     --ah-hover-bg: rgba(255,255,255,0.2);
     --dark-grey: rgba(255, 255, 255, 0.746);
     --btn-hover-color: #00c4b6;
@@ -124,6 +124,6 @@
     --qx-ai-post-bg: rgba(48, 52, 63, 0.35);
     --qx-ai-border: 1px solid #3d3d3f;
     --qx-ai-tag-bg: #30343f;
-    --text-highlight-color: #fff;
+    --text-highlight-color: #fff!important;
     --reward-main: #30343f
 }
