修改夜间模式

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/essay.pug
@@ -1,13 +1,11 @@
 #essay_page
-  script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/waterfall.js")
-  script(async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/essay.js")
+  script(async src="/js/waterfall.js")
+  script(async src="/js/essay.js")
   style.
     #web_bg~.page:has(#essay_page) {
       background: none!important;
     }
-    #bber .timeline ul li.bber-item {
-      width: auto!important;
-    }
+#essay_page
   #bber
     section.timeline.page-1
       ul#waterfall.list
