--- a/themes/sxiaohe/source/css/_sxiaohe_diy_color/chuckleMainColor.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_diy_color/chuckleMainColor.css
@@ -126,6 +126,6 @@
     --qx-ai-border: 1px solid #3d3d3f;
     --qx-ai-tag-bg: #30343f;
     --text-highlight-color: #fff!important;
-    --reward-main: #30343f
-    --sidebar-bg: rgba(18, 18, 18, .8);
+    --reward-main: #30343f;
+    --sidebar-bg: rgba(18, 18, 18, .8)
 }
