--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2240,6 +2240,10 @@ style.
   #article-container figure.highlight {
     border-radius: 7px;
   }
+  /* 17.文章表格滚动条优化 */
+  .table-wrap {
+    scrollbar-width: none;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
