--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2244,6 +2244,10 @@ style.
   .table-wrap {
     scrollbar-width: none;
   }
+  /* 18.文章推荐卡片调整 */
+  .relatedPosts>.relatedPosts-list>div {
+    border-radius: 18px;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
